manifests/pod-manual-schedule.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: manual-schedule
  managedFields:
    manager: kubectl-run
    operation: Update
  name: manual-schedule
  namespace: default
spec:
  nodeName: cluster2-master1        # add the master node name
  containers:
  - image: httpd:2.4-alpine
    imagePullPolicy: IfNotPresent
    name: manual-schedule
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-nxnc7
      readOnly: true
  dnsPolicy: ClusterFirst
